modificacion de dockerFile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ProyectoHorario_1
 
-# Usa las variables exactas que Railway proporciona
+# Variables de Railway
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
