--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,15 @@
-spring.application.name=ProyectoHorario_1
+# Configuración del servidor
+server.port=${PORT:8080}
 
-# Variables de Railway
+# Configuración de la base de datos (PostgreSQL)
+# Railway proporciona estas variables automáticamente: PGHOST, PGPORT, PGUSER, PGPASSWORD, PGDATABASE.
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+# Configuración de JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Puerto dinámico de Railway
-server.port=${PORT:8080}
-
-spring.jpa.properties.hibernate.connection.autocommit=false
-spring.jpa.properties.hibernate.connection.isolation=2
-spring.transaction.default-timeout=30
-
-logging.level.org.springframework.transaction=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
