--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,22 @@
-# Configuración del servidor
-server.port=${PORT:8080}
+spring.application.name=ProyectoHorario_1
 
-# Configuración de la base de datos (PostgreSQL)
-# Railway proporciona estas variables automáticamente: PGHOST, PGPORT, PGUSER, PGPASSWORD, PGDATABASE.
+# Variables de Railway
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# Puerto dinámico de Railway
+server.port=${PORT:8080}
+
+spring.jpa.properties.hibernate.connection.autocommit=false
+spring.jpa.properties.hibernate.connection.isolation=2
+spring.transaction.default-timeout=30
+
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
