--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Puerto dinámico de Railway
 server.port=${PORT:8080}
 
-spring.jpa.properties.hibernate.connection.autocommit=false
-spring.jpa.properties.hibernate.connection.isolation=2
-spring.transaction.default-timeout=30
+# Se comentan las siguientes propiedades. Estaban causando conflicto con la configuración
+# automática de HikariCP, resultando en que la URL de la BD fuera nula (null).
+# spring.jpa.properties.hibernate.connection.autocommit=false
+# spring.jpa.properties.hibernate.connection.isolation=2
+# spring.transaction.default-timeout=30
 
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
