modificacion de properties-v7

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=ProyectoHorario_1
 
 # Variables de Railway
-# IMPORTANTE: Se añade '?sslmode=require' al final de la URL
-# para asegurar una conexión segura (SSL), requerida por PostgreSQL en Railway.
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require
+# --- CAMBIO IMPORTANTE ---
+# Se recomienda usar la variable DATABASE_URL si está disponible en Railway,
+# ya que contiene toda la información de conexión privada (incluyendo SSL).
+# Si DATABASE_URL no existe, se usa la versión ensamblada con sslmode=require.
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
