--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=ProyectoHorario_1
 
 # Variables de Railway
-# --- CAMBIO IMPORTANTE ---
-# Se recomienda usar la variable DATABASE_URL si está disponible en Railway,
-# ya que contiene toda la información de conexión privada (incluyendo SSL).
-# Si DATABASE_URL no existe, se usa la versión ensamblada con sslmode=require.
+# Se usa DATABASE_URL para la conexión privada. Si no existe, se ensambla la URL
+# usando PGHOST, PGPORT, etc., y se añade ?sslmode=require al final.
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- CLAVE PARA LA CONEXIÓN SSL ---
+# Indica explícitamente a Hikari (el pool de conexiones) que debe forzar el modo SSL,
+# lo cual es OBLIGATORIO en la mayoría de bases de datos en la nube.
+spring.datasource.hikari.ssl-mode=require
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -18,8 +21,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Puerto dinámico de Railway
 server.port=${PORT:8080}
 
-# Se comentan las siguientes propiedades. Estaban causando conflicto con la configuración
-# automática de HikariCP, resultando en que la URL de la BD fuera nula (null).
+# Propiedades de bajo nivel comentadas para evitar conflictos con Hikari.
 # spring.jpa.properties.hibernate.connection.autocommit=false
 # spring.jpa.properties.hibernate.connection.isolation=2
 # spring.transaction.default-timeout=30
