--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,9 @@
 spring.application.name=ProyectoHorario_1
 
 # Variables de Railway
-# Se usa DATABASE_URL para la conexión privada. Si no existe, se ensambla la URL
-# usando PGHOST, PGPORT, etc., y se añade ?sslmode=require al final.
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# --- CLAVE PARA LA CONEXIÓN SSL ---
-# Indica explícitamente a Hikari (el pool de conexiones) que debe forzar el modo SSL,
-# lo cual es OBLIGATORIO en la mayoría de bases de datos en la nube.
-spring.datasource.hikari.ssl-mode=require
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -21,10 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Puerto dinámico de Railway
 server.port=${PORT:8080}
 
-# Propiedades de bajo nivel comentadas para evitar conflictos con Hikari.
-# spring.jpa.properties.hibernate.connection.autocommit=false
-# spring.jpa.properties.hibernate.connection.isolation=2
-# spring.transaction.default-timeout=30
+spring.jpa.properties.hibernate.connection.autocommit=false
+spring.jpa.properties.hibernate.connection.isolation=2
+spring.transaction.default-timeout=30
 
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
