--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,23 @@
 spring.application.name=ProyectoHorario_1
 
-# Variables de Railway
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+# Railway proporciona DATABASE_URL completa
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/prueba_io}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:123}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Puerto dinámico de Railway
-server.port=${PORT:8080}
+# Puerto dinámico
+server.port=${PORT:8081}
 
+# Configuración de transacciones
 spring.jpa.properties.hibernate.connection.autocommit=false
 spring.jpa.properties.hibernate.connection.isolation=2
 spring.transaction.default-timeout=30
-
 logging.level.org.springframework.transaction=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
