--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ProyectoHorario_1
 
-# Railway proporciona DATABASE_URL automáticamente
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/prueba_io}
+# Railway proporciona DATABASE_URL en formato postgres://, Spring Boot necesita jdbc:postgresql://
+spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
