actualizacion de la configuración de la base de datos y el puerto del servidor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=ProyectoHorario_1
 
-# Railway proporciona DATABASE_URL en formato postgres://, Spring Boot necesita jdbc:postgresql://
-spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
+# Railway proporciona DATABASE_URL automáticamente
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/prueba_io}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:123}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -9,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Puerto dinámico de Railway
-server.port=${PORT:8080}
+server.port=${PORT:8082}
 
 spring.jpa.properties.hibernate.connection.autocommit=false
 spring.jpa.properties.hibernate.connection.isolation=2
