--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ProyectoHorario_1
 
 # Railway proporciona DATABASE_URL automáticamente
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/prueba_io}
+spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:123}
 
