--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,12 @@ spring.application.name=ProyectoHorario_1
 spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:123}
+spring.datasource.hikari.maximum-pool-size=8
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true6
 
 # Puerto dinámico de Railway
 server.port=${PORT:8082}
