--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 spring.application.name=ProyectoHorario_1
 
-# Railway proporciona DATABASE_URL automáticamente
+# Railway proporciona DATABASE_URL en formato postgres://, Spring Boot necesita jdbc:postgresql://
 spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
-spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:123}
-spring.datasource.hikari.maximum-pool-size=8
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true6
+spring.jpa.properties.hibernate.format_sql=true
 
 # Puerto dinámico de Railway
-server.port=${PORT:8082}
+server.port=${PORT:8080}
 
 spring.jpa.properties.hibernate.connection.autocommit=false
 spring.jpa.properties.hibernate.connection.isolation=2
