--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=ProyectoHorario_1
 
-# Railway proporciona DATABASE_URL en formato postgres://, Spring Boot necesita jdbc:postgresql://
-spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/prueba_io}
+# Usa las variables individuales que Railway proporciona
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:prueba_io}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:123}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
