ajuste de la configuración de la base de datos: se corrigió la URL de la base de datos y se actualizó el puerto del servidor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # Puerto dinámico de Railway
 server.port=${PORT:8080}
 
-spring.jpa.properties.hibernate.connection.autocommit=false
+spring.jpa.properties.hibernate.connection.autocommit=true
 spring.jpa.properties.hibernate.connection.isolation=2
 spring.transaction.default-timeout=30
 
-logging.level.org.springframework.transaction=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Reduce los logs para evitar el rate limit
+logging.level.org.springframework.transaction=WARN
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
